kubernetes/apps/networking/ingress-nginx/templates/adguardhome.yaml
---
# yamllint disable rule:line-length
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: adguardhome
spec:
  ports:
    - name: adguardhome
      port: 8443
      protocol: TCP
      targetPort: 8443
  clusterIP: None
  type: ClusterIP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone/endpoints-v1.json
apiVersion: v1
kind: Endpoints
metadata:
  name: adguardhome
subsets:
  - addresses:
      - ip: "<path:kubernetes/data/internal/base#IP_GATEWAY>"
    ports:
      - name: adguardhome
        port: 8443
        protocol: TCP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguardhome
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$binary_remote_addr"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Admin
    gethomepage.dev/name: AdGuard Home
    gethomepage.dev/icon: adguard-home.png
    gethomepage.dev/description: Ad Blocker
spec:
  ingressClassName: internal
  rules:
    - host: "adguard.<path:kubernetes/data/internal/base#ROOT_DOMAIN>"
      http:
        paths:
          - backend:
              service:
                name: adguardhome
                port:
                  number: 8443
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "adguard.<path:kubernetes/data/internal/base#ROOT_DOMAIN>"

---
# yaml-language-server: $schema=https://deedee-ops.github.io/schemas/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: adguardhome
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: ingress-nginx
    egress:
      - toPorts:
          - ports:
              - port: "8443"
                protocol: TCP
        toCIDRSet:
          - cidr: "<path:kubernetes/data/internal/base#IP_GATEWAY>/32"
# yamllint enable rule:line-length
