kubernetes/apps/networking/ingress-nginx/templates/minio.yaml
---
# yamllint disable rule:line-length
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: minio-ui
spec:
  ports:
    - name: minio-ui
      port: 9001
      protocol: TCP
      targetPort: 9001
  clusterIP: None
  type: ClusterIP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: minio-s3
spec:
  ports:
    - name: minio-s3
      port: 9000
      protocol: TCP
      targetPort: 9000
  clusterIP: None
  type: ClusterIP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone/endpoints-v1.json
apiVersion: v1
kind: Endpoints
metadata:
  name: minio-ui
subsets:
  - addresses:
      - ip: "<path:kubernetes/data/internal/base#IP_NAS>"
    ports:
      - name: minio-ui
        port: 9001
        protocol: TCP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone/endpoints-v1.json
apiVersion: v1
kind: Endpoints
metadata:
  name: minio-s3
subsets:
  - addresses:
      - ip: "<path:kubernetes/data/internal/base#IP_NAS>"
    ports:
      - name: minio-s3
        port: 9000
        protocol: TCP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ui
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: >-
      more_set_headers "Content-Security-Policy: default-src 'self' 'unsafe-inline' data: blob: wss:;
      object-src 'none'; connect-src 'self' https://unpkg.com;
      report-uri https://csp.<path:kubernetes/data/internal/base#ROOT_DOMAIN>/report/csp/minio;";
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Admin
    gethomepage.dev/name: Minio
    gethomepage.dev/icon: minio.png
    gethomepage.dev/description: S3-compatible storage
spec:
  ingressClassName: internal
  rules:
    - host: "minio.<path:kubernetes/data/internal/base#ROOT_DOMAIN>"
      http:
        paths:
          - backend:
              service:
                name: minio-ui
                port:
                  number: 9001
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "minio.<path:kubernetes/data/internal/base#ROOT_DOMAIN>"
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-s3
  annotations:
    nginx.ingress.kubernetes.io/enable-global-auth: "false"
spec:
  ingressClassName: internal
  rules:
    - host: "s3.<path:kubernetes/data/internal/base#ROOT_DOMAIN>"
      http:
        paths:
          - backend:
              service:
                name: minio-s3
                port:
                  number: 9000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "minio.<path:kubernetes/data/internal/base#ROOT_DOMAIN>"
---
# yaml-language-server: $schema=https://deedee-ops.github.io/schemas/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: minio
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: ingress-nginx
    egress:
      - toPorts:
          - ports:
              - port: "9000"
                protocol: TCP
              - port: "9001"
                protocol: TCP
        toCIDRSet:
          - cidr: "<path:kubernetes/data/internal/base#IP_NAS>/32"
# yamllint enable rule:line-length
