kubernetes/apps/networking/ingress-nginx/templates/network_policy.yaml
---
# yaml-language-server: $schema=https://deedee-ops.github.io/schemas/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingress-nginx-wireguard
  namespace: networking
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
  ingress:
    - fromCIDRSet:
        - cidr: 10.250.0.0/16
      toPorts:
        - ports:
            - port: "80"
        - ports:
            - port: "443"
        - ports:
            - port: "22000"
