kubernetes/apps/networking/ingress-nginx/templates/opnsense.yaml
---
# yamllint disable rule:line-length
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: opnsense
spec:
  ports:
    - name: opnsense
      port: 443
      protocol: TCP
      targetPort: 443
  clusterIP: None
  type: ClusterIP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone/endpoints-v1.json
apiVersion: v1
kind: Endpoints
metadata:
  name: opnsense
subsets:
  - addresses:
      - ip: "<path:kubernetes/data/internal/base#IP_GATEWAY>"
    ports:
      - name: opnsense
        port: 443
        protocol: TCP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opnsense
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$binary_remote_addr"
    nginx.ingress.kubernetes.io/configuration-snippet: >-
      more_set_headers "Content-Security-Policy: default-src 'self' 'unsafe-inline' 'unsafe-eval' data: blob: wss:;
      connect-src 'self' *.<path:kubernetes/data/internal/base#ROOT_DOMAIN>; object-src 'none';
      report-uri https://csp.<path:kubernetes/data/internal/base#ROOT_DOMAIN>/report/csp/opnsense;";
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Admin
    gethomepage.dev/name: OpnSense
    gethomepage.dev/icon: opnsense.png
    gethomepage.dev/description: Software Firewall
spec:
  ingressClassName: internal
  rules:
    - host: "opnsense.<path:kubernetes/data/internal/base#ROOT_DOMAIN>"
      http:
        paths:
          - backend:
              service:
                name: opnsense
                port:
                  number: 443
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "opnsense.<path:kubernetes/data/internal/base#ROOT_DOMAIN>"
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: opnsense
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: ingress-nginx
    egress:
      - toPorts:
          - ports:
              - port: "443"
                protocol: TCP
        toCIDRSet:
          - cidr: "<path:kubernetes/data/internal/base#IP_GATEWAY>/32"
# yamllint enable rule:line-length
